# m5stack-stickcplus-zephyr-demo

./: CMakeLists.txt  README.md  west.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
app/: CMakeLists.txt  prj.conf
app/boards/: m5stickc_plus.overlay
app/src/: main.c
